--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: imc608
 subtitle:
-description:
-author: John Doe
-language:
+description: documents of imc608
+author: zeng yan
+language: zh-CN
 timezone:
 
 # URL
@@ -63,7 +63,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: casper
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
