--- a/_config.yml
+++ b/_config.yml
@@ -69,5 +69,5 @@ theme: huno
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/zzzengyan/zzzengyan.github.io.git
+  repository: git@github.com:zzzengyan/zzzengyan.github.io.git
   branch: master
