--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,9 @@ tag_map:
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
+# Duoshuo
+#duoshuo_shortname: letian
+
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
